[package]
name = "webgate"
version = "0.1.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "Configurable remote command execution via WebSockets and static file service via HTTP"
license = "MIT"
keywords = ["cli", "http", "websockets", "process", "pipe"]
repository = "https://github.com/NathanRoyer/webgate/"
readme = "README.md"

[[bin]]
name = "webgate"

[dependencies]
popol = "0.5"
lazy_static = "1.4"
base64 = "0.13"
sha1 = "0.6"
byteorder = "1"
json = "0.12"
